Format emails the way abalonemail likes

--- a/email_templates/index.html
+++ b/email_templates/index.html
@@ -45,7 +45,7 @@
         line-height: inherit;
       }
 
-      a[x-apple-data-detectors="true"] {
+      a[x-apple-data-detectors='true'] {
         color: inherit !important;
         text-decoration: none !important;
       }
